[package]
name = "coney-actor-supervisor"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
polymap = "^0.3"
frunk_core = "^0.3"
coney-actor = { path = "../../crates/coney-actor", version = "^0.1" }
