[package]
name = "coney-actor"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1"
futures = "^0.3"
async-trait = "^0.1"

[dev-dependencies]
anyhow = "^1"
tokio = { version = "^0.3", features = ["full"] }